# mermaid-parser-py

./: README.md  pyproject.toml
mermaid_parser/converters/: state_diagram.py
mermaid_parser/structs/: state_diagram.py
tests/: test_flowchart_converter.py  test_llm_generated_examples.py  test_printer_state_machine.py  test_state_diagram_converter.py
tests/assets/: GPT-Dishwasher.mmd  GPT-breadMaker.mmd  GPT-spamanager.mmd  claude-breadMaker.mmd  claude-dishwasher.mmd  claude-spamanager.mmd
